src/css/blog.css
/* ... */
.blog__share-link {
  &--vk {
    background-image: url('/assets/images/svg-icons/social-vkontakte.svg');
    background-repeat: no-repeat;
  }
}

.blog__article {
  &__header {
    @media (--tablet-viewport) {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
    }

    &-item {
      &--left {
        @media (--tablet-viewport) {
          width: calc(50% - var(--padding-side-columns) / 2);
          padding-top: 36px;
        }

        @media (--tablet-landscape-viewport) {
          width: 50%;
        }
      }

      &--right {
        position: relative;
        padding-top: 40px;
        padding-bottom: 40px;
        font-weight: 500;

        @media (--tablet-viewport) {
          width: calc(50% - var(--padding-side-columns) / 2);
        }

        @media (--tablet-landscape-viewport) {
          width: calc(50% - var(--padding-side-columns));
        }

        @media (--laptop-viewport) {
          width: calc(50% - var(--padding-side-columns) / 2);
          padding-right: calc(var(--padding-side-columns) / 2);
        }

        @media (--desktop-viewport) {
          padding-right: calc(var(--padding-side-columns));
        }

        &:before {
          content: '';
          position: absolute;
          left: -20px;
          right: -20px;
          top: -60px;
          bottom: 0;
          background-color: var(--color-primary);
          z-index: -1;

          @media (--tablet-viewport) {
            left: calc(-1 * var(--padding-side-columns) * 1.5);
            right: calc(-1 * var(--margin-container-side));
          }
        }
      }
    }
  }

  & .blog__link-back {
    @media (--mobile-viewport) {
      display: none;
    }
  }

  &-image {
    position: relative;
    margin-top: 30px;

    @media (--tablet-viewport) {
      margin-top: 80px;
    }

    & img {
      display: block;
    }

    & .share-box {
      position: absolute;
      top: calc(100% + 45px);
      left: 0;
      display: none;
      width: 50px;

      @media (--laptop-viewport) {
        display: block;
      }

      &__link--arrow {
        background-size: 15px;
      }

      &__link--vk {
        background-size: 15px;
      }

      &__link--fb {
        background-size: 8px;
      }

      &__link--tw {
        background-size: 14px;
      }
    }
  }

  &-date {
    font-size: 14px;
    line-height: 18px;
    color: var(--text-color-main-03);
  }

  & .page__header {
    padding-top: 20px;
    padding-bottom: 40px;

    @media (--laptop-viewport) {
      padding-top: 10px;
      padding-bottom: 60px;
    }
  }

  &-short {
    font-size: var(--font-size-subtitle-2);
    line-height: var(--line-height-subtitle-2);
    margin-bottom: 30px;

    @media (--laptop-viewport) {
      margin-bottom: 50px;
    }
  }

  &-tags {
    font-size: 14px;
    line-height: 18px;
    color: var(--text-color-main-03);

    & span {
    }
  }

  &__content {
    padding-top: 10px;
    font-size: var(--font-size-content);
    line-height: var(--line-height-content);
    letter-spacing: var(--letter-spacing-content);

    @media (--tablet-viewport) {
      margin-left: calc(1.5 * var(--padding-side-columns));
      margin-right: calc(1.5 * var(--padding-side-columns));
      padding-bottom: 30px;
    }

    @media (--tablet-landscape-viewport) {
      padding-top: 60px;
    }

    @media (--laptop-viewport) {
      margin-left: calc(1.5 * var(--padding-side-columns));
      margin-right: calc(3 * var(--padding-side-columns));
    }
  }

  & p {
    margin: 32px 0;
  }

  & h2,
  & h3,
  & h4,
  & h5,
  & h6 {
    font-size: var(--font-size-title-4);
    line-height: var(--line-height-title-4);
    letter-spacing: var(--letter-spacing-0275);
    margin-top: 60px;
    margin-bottom: 40px;

    @media (--tablet-landscape-viewport) {
      margin-top: 80px;
      margin-bottom: 60px;
    }
  }

  & ul {
    margin: 32px 0;

    & li {
      position: relative;
      padding-left: 40px;

      @media (--laptop-viewport) {
        padding-left: 60px;
      }

      & + li {
        margin-top: 32px;
      }

      &:before {
        content: '';
        position: absolute;
        top: 4px;
        left: 0;
        width: 20px;
        height: 20px;
        background-color: var(--color-primary);
      }
    }
  }

  & ol {
    margin: 32px 0;
    padding-left: 25px;

    & li {
      list-style-type: decimal;
      padding-left: 15px;

      & + li {
        margin-top: 32px;
      }
    }
  }

  & blockquote {
    margin: 40px 0;
    padding-top: 60px;
    padding-bottom: 60px;
    position: relative;

    @media (--tablet-landscape-viewport) {
      margin-top: 80px;
      margin-bottom: 80px;
    }

    &:before {
      content: '';
      position: absolute;
      top: 0;
      right: calc(-1 * var(--margin-container-side));
      left: 0;
      bottom: 0;
      background-color: var(--color-secondary);
      box-shadow: 0px 5px 14px rgba(0, 0, 0, 0.08);

      @media (--tablet-viewport) {
        left: calc(-1 * var(--padding-side-columns));
        right: calc(-3 * var(--padding-side-columns));
      }

      @media (--laptop-viewport) {
      }
    }

    & p {
      position: relative;
      padding: 76px 0 76px 40px;
      margin: 0;
      font-size: var(--font-size-content-3);
      line-height: var(--line-height-content-3);
      letter-spacing: var(--letter-spacing-0275);
      font-weight: 500;

      @media (--tablet-viewport) {
        padding-left: 0;
      }

      &:before,
      &:after {
        content: '';
        position: absolute;
        left: 40px;
        width: 40px;
        height: 36px;
        background-image: url('/assets/images/blockquote.svg');
        background-repeat: no-repeat;

        @media (--tablet-viewport) {
          left: 0;
        }
      }

      &:before {
        top: 0;
      }

      &:after {
        bottom: 0;
        transform: scale(-1);
      }
    }
  }
}
/* ... */

